Update README.md for applications release
Describe changes related to providing comparison application release.